--- a/hugo.toml
+++ b/hugo.toml
@@ -3,12 +3,14 @@ languageCode = 'en-us'
 title = 'My New Hugo Site'
 
 [module]
-  [module.hugoVersion]
-    extended = false
-    min = "0.116.0"
+[module.hugoVersion]
+extended = false
+min = "0.116.0"
 
 [taxonomies]
-  category = 'categories'
-  tag = 'tags'
-  sector = 'sectors'
-  group = 'tagged-groups'
+category = "categories"
+country = "countries"
+tag = "tags"
+sector = "sectors"
+tactic = "tactics"
+technique = "techniques"
